Refactoring new Integer => Integer.valueOf new Boolean("true") => Boolean.TRUE
git-svn-id: https://ho1.svn.sourceforge.net/svnroot/ho1/trunk@933 b8de521a-fa13-0410-8113-fc7ffabbd59a